Bug 1148214 - Replace manual AllocKind range checks with a few centralized functions. r=terrence