js/src/jit/MacroAssembler.cpp
@@ -1144,7 +1144,7 @@ void
 MacroAssembler::allocateObject(Register result, Register temp, gc::AllocKind allocKind,
                                uint32_t nDynamicSlots, gc::InitialHeap initialHeap, Label *fail)
 {
-    MOZ_ASSERT(allocKind <= gc::AllocKind::OBJECT_LAST);
+    MOZ_ASSERT(gc::IsObjectAllocKind(allocKind));
 
     checkAllocatorState(fail);
 
@@ -1180,7 +1180,7 @@ MacroAssembler::newGCThing(Register result, Register temp, JSObject *templateObj
                            gc::InitialHeap initialHeap, Label *fail)
 {
     gc::AllocKind allocKind = templateObj->asTenured().getAllocKind();
-    MOZ_ASSERT(allocKind <= gc::AllocKind::OBJECT_LAST);
+    MOZ_ASSERT(gc::IsObjectAllocKind(allocKind));
 
     size_t ndynamic = 0;
     if (templateObj->isNative())
@@ -1194,7 +1194,7 @@ MacroAssembler::createGCObject(Register obj, Register temp, JSObject *templateOb
                                bool convertDoubleElements)
 {
     gc::AllocKind allocKind = templateObj->asTenured().getAllocKind();
-    MOZ_ASSERT(allocKind <= gc::AllocKind::OBJECT_LAST);
+    MOZ_ASSERT(gc::IsObjectAllocKind(allocKind));
 
     uint32_t nDynamicSlots = 0;
     if (templateObj->isNative()) {
