js/src/jit/VMFunctions.cpp
@@ -1160,7 +1160,7 @@ AssertValidObjectPtr(JSContext *cx, JSObject *obj)
     if (obj->isTenured()) {
         MOZ_ASSERT(obj->isAligned());
         gc::AllocKind kind = obj->asTenured().getAllocKind();
-        MOZ_ASSERT(kind <= js::gc::AllocKind::OBJECT_LAST);
+        MOZ_ASSERT(gc::IsObjectAllocKind(kind));
         MOZ_ASSERT(obj->asTenured().zone() == cx->zone());
     }
 #endif
